app/globals.css
@import "tailwindcss";
@import "tw-animate-css";
@import "shadcn/tailwind.css";

@custom-variant dark (&:is(.dark *));

@theme inline {
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --font-sans: var(--font-geist-sans);
    --font-mono: var(--font-mono);
    --font-heading: var(--font-mono);
    --color-sidebar-ring: var(--sidebar-ring);
    --color-sidebar-border: var(--sidebar-border);
    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
    --color-sidebar-accent: var(--sidebar-accent);
    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
    --color-sidebar-primary: var(--sidebar-primary);
    --color-sidebar-foreground: var(--sidebar-foreground);
    --color-sidebar: var(--sidebar);
    --color-chart-5: var(--chart-5);
    --color-chart-4: var(--chart-4);
    --color-chart-3: var(--chart-3);
    --color-chart-2: var(--chart-2);
    --color-chart-1: var(--chart-1);
    --color-ring: var(--ring);
    --color-input: var(--input);
    --color-border: var(--border);
    --color-destructive: var(--destructive);
    --color-accent-foreground: var(--accent-foreground);
    --color-accent: var(--accent);
    --color-muted-foreground: var(--muted-foreground);
    --color-muted: var(--muted);
    --color-secondary-foreground: var(--secondary-foreground);
    --color-secondary: var(--secondary);
    --color-primary-foreground: var(--primary-foreground);
    --color-primary: var(--primary);
    --color-popover-foreground: var(--popover-foreground);
    --color-popover: var(--popover);
    --color-card-foreground: var(--card-foreground);
    --color-card: var(--card);
    --radius-sm: calc(var(--radius) * 0.6);
    --radius-md: calc(var(--radius) * 0.8);
    --radius-lg: var(--radius);
    --radius-xl: calc(var(--radius) * 1.4);
    --radius-2xl: calc(var(--radius) * 1.8);
    --radius-3xl: calc(var(--radius) * 2.2);
    --radius-4xl: calc(var(--radius) * 2.6);

    --color-editor-bg: var(--editor-bg);
    --color-editor-gutter: var(--editor-gutter);
    --color-editor-line-number: var(--editor-line-gutter);
    --color-editor-highlight: var(--editor-highlight);
    --color-editor-match: var(--editor-match);

    --color-json-key: var(--json-key);
    --color-json-string: var(--json-string);
    --color-json-number: var(--json-number);
    --color-json-boolean: var(--json-boolean);
    --color-json-null: var(--json-null);
    --color-json-bracket: var(--json-bracket);
}

:root {
    --background: oklch(1 0 0);
    --foreground: oklch(0.147 0.004 49.25);
    --card: oklch(1 0 0);
    --card-foreground: oklch(0.147 0.004 49.25);
    --popover: oklch(1 0 0);
    --popover-foreground: oklch(0.147 0.004 49.25);
    --primary: oklch(0.216 0.006 56.043);
    --primary-foreground: oklch(0.985 0.001 106.423);
    --secondary: oklch(0.97 0.001 106.424);
    --secondary-foreground: oklch(0.216 0.006 56.043);
    --muted: oklch(0.97 0.001 106.424);
    --muted-foreground: oklch(0.553 0.013 58.071);
    --accent: oklch(0.97 0.001 106.424);
    --accent-foreground: oklch(0.216 0.006 56.043);
    --destructive: oklch(0.577 0.245 27.325);
    --border: oklch(0.923 0.003 48.717);
    --input: oklch(0.923 0.003 48.717);
    --ring: oklch(0.709 0.01 56.259);
    --chart-1: oklch(0.869 0.005 56.366);
    --chart-2: oklch(0.553 0.013 58.071);
    --chart-3: oklch(0.444 0.011 73.639);
    --chart-4: oklch(0.374 0.01 67.558);
    --chart-5: oklch(0.268 0.007 34.298);
    --radius: 0.625rem;
    --sidebar: oklch(0.985 0.001 106.423);
    --sidebar-foreground: oklch(0.147 0.004 49.25);
    --sidebar-primary: oklch(0.216 0.006 56.043);
    --sidebar-primary-foreground: oklch(0.985 0.001 106.423);
    --sidebar-accent: oklch(0.97 0.001 106.424);
    --sidebar-accent-foreground: oklch(0.216 0.006 56.043);
    --sidebar-border: oklch(0.923 0.003 48.717);
    --sidebar-ring: oklch(0.709 0.01 56.259);

    --editor-bg: oklch(100% 0 0);
    --editor-gutter: oklch(96.77% 0.0027 286.35);
    --editor-line-number: oklch(71.54% 0.0152 268.44);
    --editor-highlight: oklch(96.21% 0.0568 95.34);
    --editor-match: oklch(86.52% 0.1768 90.38);

    --json-key: oklch(49.48% 0.1544 262.31);
    --json-string: oklch(55.51% 0.11 157.45);
    --json-number: oklch(62.05% 0.1579 48.99);
    --json-boolean: oklch(50.13% 0.1821 312.47);
    --json-null: oklch(64.01% 0 0);
    --json-bracket: oklch(54.42% 0.0201 264.39);
}

.dark {
    --background: oklch(0.147 0.004 49.25);
    --foreground: oklch(0.985 0.001 106.423);
    --card: oklch(0.216 0.006 56.043);
    --card-foreground: oklch(0.985 0.001 106.423);
    --popover: oklch(0.216 0.006 56.043);
    --popover-foreground: oklch(0.985 0.001 106.423);
    --primary: oklch(0.923 0.003 48.717);
    --primary-foreground: oklch(0.216 0.006 56.043);
    --secondary: oklch(0.268 0.007 34.298);
    --secondary-foreground: oklch(0.985 0.001 106.423);
    --muted: oklch(0.268 0.007 34.298);
    --muted-foreground: oklch(0.709 0.01 56.259);
    --accent: oklch(0.268 0.007 34.298);
    --accent-foreground: oklch(0.985 0.001 106.423);
    --destructive: oklch(0.704 0.191 22.216);
    --border: oklch(1 0 0 / 10%);
    --input: oklch(1 0 0 / 15%);
    --ring: oklch(0.553 0.013 58.071);
    --chart-1: oklch(0.869 0.005 56.366);
    --chart-2: oklch(0.553 0.013 58.071);
    --chart-3: oklch(0.444 0.011 73.639);
    --chart-4: oklch(0.374 0.01 67.558);
    --chart-5: oklch(0.268 0.007 34.298);
    --sidebar: oklch(0.216 0.006 56.043);
    --sidebar-foreground: oklch(0.985 0.001 106.423);
    --sidebar-primary: oklch(0.488 0.243 264.376);
    --sidebar-primary-foreground: oklch(0.985 0.001 106.423);
    --sidebar-accent: oklch(0.268 0.007 34.298);
    --sidebar-accent-foreground: oklch(0.985 0.001 106.423);
    --sidebar-border: oklch(1 0 0 / 10%);
    --sidebar-ring: oklch(0.553 0.013 58.071);

    --editor-bg: oklch(0.2308 0 0);
    --editor-gutter: oklch(0.2893 0 0);
    --editor-line-number: oklch(71.54% 0.0152 268.44);
    --editor-highlight: oklch(96.21% 0.0568 95.34);
    --editor-match: oklch(86.52% 0.1768 90.38);

    --json-key: oklch(0.8195 0.0977 262.31);
    --json-string: oklch(0.9048 0.1322 157.45);
    --json-number: oklch(62.05% 0.1579 48.99);
    --json-boolean: oklch(0.8195 0.1248 312.47);
    --json-null: oklch(0.7875 0 0);
    --json-bracket: oklch(0.6573 0.0201 264.39);
}

@layer base {
    * {
        @apply border-border outline-ring/50;
    }
    body {
        @apply bg-background text-foreground;
    }
    html {
        @apply font-mono;
    }
}

